Drag-n-drop template from solex tree: set size correctly